--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,18 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li{% if request.resolver_match.url_name == 'homepage' %} class="active"{% endif %}><a href="{% url 'homepage' %}">Accueil</a></li>
+            {% if my_associations.count == 1 %}
+            <li><a href="{% url 'association-detail' my_associations.0.id %}">{{ my_associations.0.name }}</a></li>
+            {% elif my_associations.count > 1 %}
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Mes associations<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% for association in my_associations %}
+                <li><a href="{% url 'association-detail' association.id %}">{{ association.name }}</a></li>
+                {% endfor %}
+              </ul>
+            </li>
+            {% endif %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
@@ -56,7 +68,6 @@
     </nav>
 
     <div class="container">
-
       {% block content %}{% endblock %}
 
     </div>
