--- a/templates/association/update.html
+++ b/templates/association/update.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block quick_actions %}
+<a href="{% url 'association-detail' association.id %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
 <button form="updateForm" type="submit" class="btn btn-success"><i class="fa fa-save"></i> Enregistrer</button>
 {% endblock %}
 
