--- a/templates/association/detail.html
+++ b/templates/association/detail.html
@@ -1,6 +1,6 @@
 {% extends 'association/base_association.html' %}
 
-{% block page_title %}
+{% block page_sub_title %}
   Vue générale
 {% endblock %}
 
