--- a/templates/association/new.html
+++ b/templates/association/new.html
@@ -8,7 +8,7 @@
 
 {% block quick_actions %}
 <a href="{% url 'association-list' %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
-<button form="newForm" type="submit" class="btn btn-success"><i class="fa fa-save"></i> Enregistrer</button>
+<button form="associationForm" type="submit" class="btn btn-success"><i class="fa fa-save"></i> Enregistrer</button>
 {% endblock %}
 
 {% block content %}
