[File] Begin file upload bis (forgottent files)

--- a/templates/association/file_upload.html
+++ b/templates/association/file_upload.html
@@ -1,32 +1,19 @@
 {% extends 'association/base_association.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block page_sub_title %}
-  Fichiers
+  Uploader un fichier
 {% endblock %}
 
 {% block quick_actions %}
-  {% if current_folder.is_writable %}
-  <a href="{% url 'association-file-upload' association.id current_folder.id %}" class="btn btn-primary"><i class="fa fa-upload"></i> Uploader un document</a>
-  {% endif %}
+  <a href="{% url 'association-file-tree' association.id current_folder.id %}" class="btn btn-default"><i class="fa fa-times"></i> Annuler</a>
+  <button form="associationForm" type="submit" class="btn btn-success"><i class="fa fa-save"></i> Enregistrer</button>
 {% endblock %}
 
 {% block content_association %}
-  <table class="table table-stripped table-hover">
-    {% if current_folder %}
-      {% if current_folder.parent %}
-        <tr>
-          <td><i class="fa fa-folder"></i> <a href="{% url 'association-file-tree' association.id folder.parent.id %}">..</a></td>
-        </tr>
-      {% else %}
-        <tr>
-          <td><i class="fa fa-folder"></i> <a href="{% url 'association-file-tree' association.id %}">..</a></td>
-        </tr>
-      {% endif %}
-    {% endif %}
-    {% for folder in folders %}
-      <tr>
-        <td><i class="fa fa-folder"></i> <a href="{% url 'association-file-tree' association.id folder.id %}">{{ folder.name }}</a></td>
-      </tr>
-    {% endfor %}
-  </table>
+  <div class="alert alert-info">
+  Ce fichier sera enregistré dans le dossier <samp>{{ current_folder.name }}</samp>.
+  </div>
+  {% crispy form %}
 {% endblock %}
