--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,9 @@
                 {% if perms.file.can_admin_file %}
                   <li><a href="{% url 'file-list' %}">Fichiers</a> </li>
                 {% endif %}
+                {% if perms.utils.can_admin_place %}
+                  <li><a href="{% url 'place-list' %}">Lieux</a> </li>
+                {% endif %}
               </ul>
             </li>
             {% endif %}
