--- a/templates/association/directory_entry/detail.html
+++ b/templates/association/directory_entry/detail.html
@@ -14,5 +14,94 @@
     Vous n'avez jamais rempli de page pour le Bot'INSA.
   </div>
   {% else %}
+    {% if not object.is_online %}
+      <div class="alert alert-warning" role="alert">
+        Cette version est en cours de validation par le responsable VA. Elle n'est donc pas encore publiée.
+      </div>
+    {% endif %}
+
+    <b>Description</b>
+    <div class="well well-sm">{{ object.description|linebreaksbr }}</div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <b>Adresse de contact</b>
+        <div class="well well-sm"><a href="mailto:{{ object.contact_address }}">{{ object.contact_address }}</a></div>
+      </div>
+      <div class="col-md-6">
+        <b>Numéro de téléphone</b>
+        <div class="well well-sm">
+          {% if object.phone %}
+            {{ object.phone }}
+          {% else %}
+            <i>Non défini</i>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <b>Horaires de permanence</b>
+        <div class="well well-sm">
+          <table class="table">
+            <tbody>
+              {% for opening_hour in object.opening_hours.all %}
+              <tr>
+                <td>{{ days|get_tuple:opening_hour.day }}</td>
+                <td>de {{ opening_hour.begins_at|time:"H:i" }}</td>
+                <td>à {{ opening_hour.ends_at|time:"H:i" }}</td>
+                <td>
+                  <a href="#" data-toggle="tooltip" title="Modifier"><i class="fa fa-pencil"></i></a>
+                  <a href="#" data-toggle="tooltip" title="Supprimer"><i class="fa fa-trash"></i></a>
+                </td>
+              </tr>
+              {% endfor %}
+              <tr>
+                <td colspan="4"><a href="#">Ajouter un horaire</a></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <b>Lieu</b>
+        <div class="well well-sm">
+          {% if object.place_id %}
+            {{ object.place.name }}
+          {% else %}
+            <i>Non défini</i>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+
+    <b>URL site web</b>
+    <div class="well well-sm">
+      {% if object.website_url %}
+        <a href="{{ object.website_url }}">{{ object.website_url }}</a>
+      {% else %}
+        <i>Non défini</i>
+      {% endif %}
+    </div>
+
+    <b>URL page Facebook</b>
+    <div class="well well-sm">
+      {% if object.facebook_url %}
+        <a href="{{ object.facebook_url }}">{{ object.facebook_url }}</a>
+      {% else %}
+        <i>Non défini</i>
+      {% endif %}
+    </div>
+
+    <b>URL fil Twitter</b>
+    <div class="well well-sm">
+      {% if object.twitter_url %}
+        <a href="{{ object.twitter_url }}">{{ object.twitter_url }}</a>
+      {% else %}
+        <i>Non défini</i>
+      {% endif %}
+    </div>
+
   {% endif %}
 {% endblock %}
