--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ user.email }} <span class="caret"></span></a>
               <ul class="dropdown-menu">
+                <li><a href="{% url 'member-change-password' %}">Changer le mot de passe</a></li>
                 <li><a href="{% url 'member-logout' %}">Déconnexion</a></li>
               </ul>
             </li>
