Hide non implemented features

--- a/templates/association/directory_entry/detail.html
+++ b/templates/association/directory_entry/detail.html
@@ -13,7 +13,7 @@
       {% endif %}
     {% endif %}
   {% endif %}
-  <a href="{% url 'association-directory-update' association.id %}" class="btn btn-default"><i class="fa fa-pencil"></i> Mettre à jour</a>
+  <a href="{% url 'association-directory-update' association.id %}" class="btn btn-primary"><i class="fa fa-pencil"></i> Mettre à jour</a>
 {% endblock %}
 
 {% block content_association %}
