--- a/templates/base.html
+++ b/templates/base.html
@@ -94,6 +94,17 @@
 
     <div class="container">
 
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} alert-dismissible fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+
       <div class="row">
         <div class="col-xs-12">
           <h1>
