--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,19 +2,19 @@
 
 {% load bootstrap %}
 
-{% block title %}Login{% endblock %}
+{% block page_title %}
+  Identification
+{% endblock %}
 
 {% block content %}
   <div class="row">
     <div class="col-lg-4 col-md-3"></div>
 
     <div class="col-lg-4 col-md-6">
-      <h1>Identification</h1>
-
       <form method="post" class="form-horizontal">
         {% csrf_token %}
         {{ form|bootstrap }}
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
       </form>
 
     </div>
