User can now request password reset

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -17,6 +17,8 @@
         <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
       </form>
 
+      <a href="{% url 'member-forgot-password' %}">Mot de passe oublié ?</a>
+
     </div>
 
     <div class="col-lg-4 col-md-3"></div>
