--- a/templates/event/association_event_list.html
+++ b/templates/event/association_event_list.html
@@ -38,9 +38,9 @@
                   <td>{{ event.ends_at|date }}</td>
                   <td>
                     {% if event.is_online %}
-                      <i class="fa fa-check"></i>
+                      <a data-toggle="tooltip" title="Publié"><i class="fa fa-check"></i></a>
                     {% else %}
-                      <i class="fa fa-times"></i>
+                      <a data-toggle="tooltip" title="Non publié"><i class="fa fa-times"></i></a>
                     {% endif %}
                   </td>
                 </tr>
@@ -72,9 +72,9 @@
                   <td>{{ event.ends_at|date }}</td>
                   <td>
                     {% if event.is_online %}
-                      <i class="fa fa-check"></i>
+                      <a data-toggle="tooltip" title="Publié"><i class="fa fa-check"></i></a>
                     {% else %}
-                      <i class="fa fa-times"></i>
+                      <a data-toggle="tooltip" title="Non publié"><i class="fa fa-times"></i></a>
                     {% endif %}
                   </td>
                 </tr>
