Add date and time pickers on needed views

--- a/templates/association/mandate/new.html
+++ b/templates/association/mandate/new.html
@@ -12,5 +12,8 @@
 {% endblock %}
 
 {% block content_association %}
+  <div class="alert alert-info">
+    Attention : une fois ce mandat créé, il ne sera plus possible de modifier les anciens.
+  </div>
   {% crispy form %}
 {% endblock %}
