--- a/assets/scss/theme/_variables.scss
+++ b/assets/scss/theme/_variables.scss
@@ -20,6 +20,8 @@ $brand-success:         #18BC9C !default;
 $brand-info:            #3498DB !default;
 $brand-warning:         #F39C12 !default;
 $brand-danger:          #E74C3C !default;
+$app-color:             #E30613 !default;
+$app-color-light:        #e93c46 !default;
 
 
 //== Scaffolding
