--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'homepage' %}">Portail<b>VA</b></a>
+          <a class="navbar-brand" href="{% url 'homepage' %}">Portail<b class="brand-colored">VA</b></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
