--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,17 @@
             {# Admin stuff #}
             {% if request.user.is_active and request.user.is_staff %}
             <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Supervision<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% if perms.association.admin_requirement %}
+                  <li><a href="{% url 'requirement-list' %}">Situation administrative</a> </li>
+                {% endif %}
+              </ul>
+            </li>
+            {% endif %}
+
+            {% if request.user.is_active and request.user.is_staff %}
+            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 {% if perms.association.admin_association %}
