Association can create and update articles

--- a/templates/newsletter/article/list.html
+++ b/templates/newsletter/article/list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block quick_actions %}
-    <a href="{% url 'association-event-new' association.id %}" class="btn btn-success"><i class="fa fa-plus"></i>
+    <a href="{% url 'association-article-new' association.id %}" class="btn btn-success"><i class="fa fa-plus"></i>
         Ajouter</a>
 {% endblock %}
 
