--- a/templates/newsletter/article/delete.html
+++ b/templates/newsletter/article/delete.html
@@ -5,14 +5,14 @@
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'association-event-detail' association.id object.id %}" class="btn btn-default">Annuler</a>
+  <a href="{% url 'association-article-detail' association.id object.id %}" class="btn btn-default">Annuler</a>
 {% endblock %}
 
 {% block content %}
   <div class="row">
     <div class="col-xs-12">
       <div class="alert alert-danger" role="alert">
-        <b>Attention !</b> La suppression de l'événement <i>{{ object.name }}</i> entraînera sa <u>perte irréversible</u>.<br>
+        <b>Attention !</b> La suppression de l'article <i>{{ object.title }}</i> entraînera sa <u>perte irréversible</u>.<br>
         Voulez-vous <u>vraiment</u> poursuivre ?
       </div>
       <form action="" method="post">
