--- a/templates/newsletter/newsletter/delete.html
+++ b/templates/newsletter/newsletter/delete.html
@@ -1,11 +1,11 @@
-{% extends 'association/base_association.html' %}
+{% extends 'base.html' %}
 
 {% block page_sub_title %}
-  Suppression d'un événement
+  Suppression d'une newsletter
 {% endblock %}
 
 {% block quick_actions %}
-  <a href="{% url 'association-article-detail' association.id object.id %}" class="btn btn-default">Annuler</a>
+  <a href="{% url 'newsletter-detail' object.id %}" class="btn btn-default">Annuler</a>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,8 @@
     <div class="col-xs-12">
       <div class="alert alert-danger" role="alert">
         <b>Attention !</b> La suppression de la newsletter <i>{{ object.title }}</i> entraînera sa <u>perte irréversible</u>.<br>
-        Voulez-vous <u>vraiment</u> poursuivre ?
+        Voulez-vous <u>vraiment</u> poursuivre ?<br>
+          <b>NB:</b> Elle ne pourras plus être "visioné dans un navigateur".
       </div>
       <form action="" method="post">
         {% csrf_token %}
